Catch thread exception in predictive_connpool.js::32 for better logs on flaky test

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.3.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Networking & Observability
    • Fully Compatible
    • ALL
    • N&O 2025-07-21, N&O 2025-08-04, N&O 2025-08-18
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Catch thread exception in predictive_connpool.js for better logs on flaky test:
      https://github.com/10gen/mongo/blob/01ffaddd81c3afde3a88beb7e81b4e32304414d6/jstests/noPassthrough/network/predictive_connpool.js#L32 

      Found when investigating this: https://jira.mongodb.org/browse/BF-37977

            Assignee:
            David Goffredo
            Reporter:
            Nicole Bain
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: