SERVER-107447: jstests: propagate Thread errors (#39940)

GitOrigin-RevId: 287833f9d2d30fb639a4c2568bc8f6c83d2eb259